[package]
name = "urlpushserver"
version = "0.1.0"
edition = "2021"

[profile.release]
strip="debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.18"
pretty_env_logger = "0.5.0"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
time = "0.3.21"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
webpage = "1.6.0"
